--- a/clock-paris.html
+++ b/clock-paris.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
 <body>
-<span id="France_z71f" style="font-size:36px"></span>
+<span id="Paris_z71f" style="font-size:36px"></span>
 <script src="//widget.time.is/t.js"></script>
 <script>
-time_is_widget.init({France_z71f:{}});
+time_is_widget.init({Paris_z71f:{}});
 </script>
 </body>
