--- a/clock-paris.html
+++ b/clock-paris.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <body>
 <span id="Paris_z71f" style="font-size:36px"></span>
+<span id="ref" style="font-size:8px">Powered by Time.is</span>
 <script src="//widget.time.is/t.js"></script>
 <script>
 time_is_widget.init({Paris_z71f:{}});
