--- a/clock-montreal.html
+++ b/clock-montreal.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <body>
 <span id="Montreal_z18a" style="font-size:36px"></span>
+<span id="ref" style="font-size:8px">Powered by Time.is</span>
 <script src="//widget.time.is/t.js"></script>
 <script>
 time_is_widget.init({Montreal_z18a:{}});
